[package]
name = "timestamping"
version = "0.1.0"
authors = ["Vladimir Atamanov <rokannon@gmail.com>"]

[dependencies]
exonum = { version = "0.5.1", path = "../exonum/exonum" }
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"

[dev-dependencies]
exonum-testkit = { version = "0.5.0", path = "../exonum/testkit" }
rand = "0.4"